--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ dependencies = [
     "langchain-google-genai>=3.1.0",
     "langchain-openai>=1.0.3",
     "langchain-anthropic>=1.1.0",
-    "langchain-mistralai>=1.0.1"
+    "langchain-mistralai>=1.0.1",
+    "tavily-python>=00.7.13",
 ]
 
 [build-system]
