--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "feather-ai"
-version = "0.1.0"
+name = "feather-ai-sdk"
+version = "0.1.1"
 description = "The lightest Agentic AI Framework you'll ever see"
 authors = [{ name = "Luca Bozzetti" }]
 readme = "README.md"
@@ -11,6 +11,7 @@ dependencies = [
     "langchain-anthropic>=1.1.0",
     "langchain-mistralai>=1.0.1",
     "tavily-python>=00.7.13",
+    "langchain-experimental>=0.4.0"
 ]
 
 [build-system]
