pexels stock search

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ dependencies = [
     "langchain-anthropic>=1.1.0",
     "langchain-mistralai>=1.0.1",
     "tavily-python>=00.7.13",
-    "langchain-experimental>=0.4.0"
+    "langchain-experimental>=0.4.0",
+    "requests",
+    "certifi",
 ]
 
 [build-system]
